<resources>
    <string name="app_name">Worldskill bank</string>
    <string name="name_bank">Worldskills Bank</string>
    <string name="entrance">Войти</string>
    <string name="exchange_rates">Курсы валют</string>
    <string name="branches_and_ATMs">Отделения и банкоматы</string>
    <string name="title_activity_main_screen">Main_screen</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Платежи</string>
    <string name="title_notifications">История</string>
    <string name="title_activity_main_screen1">Main_screen_1</string>
    <string name="registration">Регистрация</string>
    <string name="cancellation">Отмена</string>
    <string name="dialogue">Диалоги</string>
    <string name="purse">Кошелёк</string>
    <string name="balance">Баланс: 35784</string>
    <string name="proceed">Продолжить</string>
    <string name="Notifications">Уведомления</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Proceed">Продолжить</string>
    <string name="See_the_name">Введите название</string>
    <string name="Enter_the_amount">Введите сумму</string>
    <string name="Your_card_will_be_blocked">Ваша карта будет заблокирована</string>
    <string name="Block">Заблокировать</string>
    <string name="card_active">карта активна</string>
    <string name="card">Карта</string>
    <string name="To_another_person">Другому человеку</string>
    <string name="Between_their">Между своими</string>
    <string name="Abroad">За рубеж</string>
    <string name="Soon">Скоро</string>
    <string name="abroad_commission">Комиссия за перевод 1% \n минимум 30 рублей \n максимум 500 рублей</string>
    <string name="Write_offs">Списания</string>
    <string name="Enrollments">Зачисления</string>
    <string name="all">Все</string>
    <string name="settings">настройки</string>
    <string name="account">мой аккаунт</string>
    <string name="Delete_history">Удалить историю</string>
    <string name="Change_user">Сменить пользователя</string>
</resources>