<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.worldskillbank.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_notifications"
            app:destination="@id/notifications_1" />
        <action
            android:id="@+id/action_navigation_home_to_branches_and_ATMs2"
            app:destination="@id/branches_and_ATMs2" />
        <action
            android:id="@+id/action_navigation_home_to_exchange_rates2"
            app:destination="@id/exchange_rates2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.worldskillbank.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.worldskillbank.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/dialogue_frag"
        android:name="com.example.worldskillbank.fragment_dialogue"
        android:label="@string/dialogue"
        tools:layout="@layout/fragment_dialogue">
    </fragment>
    <fragment
        android:id="@+id/notifications_1"
        android:name="com.example.worldskillbank.Notifications"
        android:label="fragment_notifications2"
        tools:layout="@layout/fragment_notifications2">
        <action
            android:id="@+id/action_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/branches_and_ATMs2"
        android:name="com.example.worldskillbank.branches_and_ATMs"
        android:label="activity_branches_and_atms"
        tools:layout="@layout/activity_branches_and_atms" />
    <activity
        android:id="@+id/exchange_rates2"
        android:name="com.example.worldskillbank.exchange_rates"
        android:label="activity_exchange_rates"
        tools:layout="@layout/activity_exchange_rates" />
</navigation>