<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_color"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:id="@+id/entrance"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/entrance"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/branches_and_ATMs"
        app:cornerRadius="20dp"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/door_key"
        android:text="@string/branches_and_ATMs"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/exchange_rates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exchange_rates"
        app:cornerRadius="20dp"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/coin"
        android:text="@string/exchange_rates"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/entrance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <yanzhikai.textpath.AsyncTextPathView
        android:id="@+id/name_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="148dp"
        app:duration="3000"
        app:layout_constraintBottom_toTopOf="@+id/branches_and_ATMs"
        app:layout_constraintEnd_toEndOf="@+id/branches_and_ATMs"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="@+id/branches_and_ATMs"
        app:layout_constraintTop_toTopOf="parent"
        app:pathStrokeColor="@color/ic_launcher_background"
        app:repeat="REVERSE"
        app:showPainter="true"
        app:text="Worldskills Bank"
        app:textInCenter="true"
        app:textSize="50sp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>